# discord-bot

./: keep_alive.py  main.py  prefixes.json  pyproject.toml  users.json
cogs/: on_message.py
