[tool.poetry]
name = "repl_python3_only-for-temporary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
praw = "^7.4.0"
psutil = "^5.8.0"
json2json = "^0.1.0"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.6.6"
aiohttp = "^3.7.4"
param = "^1.11.1"
aiofiles = "^0.7.0"
wikipedia = "^1.4.0"
pistonapi = "^1.0.1"
python-dotenv = "^0.19.0"
pytz = "^2021.1"
tensorflow = "^2.6.0"
express = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
